--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/three": "^0.160.0",
     "svelte": "^4.2.8",
     "svelte-check": "^3.6.2",
+    "svelte-golden-layout": "^0.1.1",
     "three": "^0.160.0",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
